force-app/main/default/objects/Pharma_Business_Objective__c/Pharma_Business_Objective__c.object-meta.xml
<CustomObject>
    <label>Pharma Business Objective</label>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Business Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>