force-app/main/default/objects/Pharma_Business_Objective__c/fields/Pharma_Project__c.field-meta.xml
<CustomField>
    <fullName>Pharma_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharma Project</label>
    <referenceTo>Pharma_Project__c</referenceTo>
    <relationshipLabel>Business Objectives</relationshipLabel>
    <relationshipName>Pharma_Business_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>