force-app/main/default/objects/Pharma_Business_Objective__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pharma_Business_Objective_Scope</valueSetName>
    </valueSet>
</CustomField>